# EasyTier-iOS

./: .gitmodules  Localizable.xcstrings  README.md  README_CN.md
.github/workflows/: sync.yml
ControlWidgets/: ControlWidgetsControl.swift
Core/: Cargo.toml
Core/src/: lib.rs
EasyTier/: ContentView.swift  EasyTierApp.swift  Info.plist  Localizable.xcstrings
EasyTier.xcodeproj/: project.pbxproj
EasyTier.xcodeproj/xcuserdata/chenx.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
EasyTier.xcodeproj/xcuserdata/chenx.xcuserdatad/xcschemes/: xcschememanagement.plist
EasyTier/AppIcon.icon/: icon.json
EasyTier/Components/: AdaptiveNavigation.swift  IPv4Field.swift  ListEditor.swift  ShareSheet.swift
EasyTier/Models/: ConfigModels.swift  ProfileModels.swift  StatusModels.swift
EasyTier/Utils/: DarwinNotificationObserver.swift  IPv4Field.swift  ListEditor.swift  LogTailer.swift  NEManager.swift  NetworkExtensionManager.swift  ProfileStore.swift  Shortcuts.swift  StatusSheet.swift
EasyTier/Views/: DashboardView.swift  LogView.swift  NetworkEditView.swift  SettingsView.swift  StatusView.swift
EasyTierNetworkExtension/: BuilderHelper.swift  EasyTierNetworkExtension-Bridging-Header.h  OSLogExporter.swift  PacketTunnelProvider.swift  TunnelHelper.swift  easytier_ffi.h  easytier_ios.h  kern_control.h
EasyTierShared/: EasyTierShared.swift
EasyTierWidgetExtension/: ControlWidget.swift  Widget.swift
ci_scripts/: ci_post_clone.sh
