[package]
name = "easytier-ios"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
easytier = { git = "https://github.com/EasyTier/EasyTier.git", version = "2.6.4", features = ["macos-ne"] }

once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = "1"
tracing = "0.1"
tracing-oslog = "0.3"
tracing-subscriber = "0.3"
